# gemm_hls

./: CLAUDE.md  CMakeLists.txt
host/: RunHardware.cpp  gemm_pynq.py
include/: Config.h.in  MatrixMultiplication.h  Memory.h  Utility.h
kernel/: Compute.cpp  Memory.cpp  Top.cpp
test/: TestSimulation.cpp
